src/test/deca/context/valid/def_affect/dbl-affect.deca
// Description:
//    Test non terminal primary_exp.
//
// Resultats:
//    ok

{
    float a = 2.3, b = 3.2;
}
