src/test/deca/context/invalid/extension/bad-type-for.deca
//Programme invalide testant for each.
//erreur ligne 8, wrong type

{
    int[3] a = {1,2,3};
    int c = 0;

    for( float b : a){
        c = c + b;
    }
}